# beryllium

./: README.md  pyproject.toml
beryllium/: api.py  models.py  schema.py  status_enum.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  FocusedWebAppComponent.tsx
frontend/src/client/: index.ts
frontend/src/client/models/: ProcessNewSchema.ts  ProcessSchema.ts  WebappNewSchema.ts  WebappSchema.ts
frontend/src/client/services/: DefaultService.ts
frontend/src/components/: NewWebAppComponent.tsx  WebAppListComponent.tsx
